# ImGui-Scape

./: CMakeLists.txt  README.md
include/: imgui_utils.cpp  imgui_utils.h  player.h
include/game/: game.cpp  game.h  player.cpp  player.h
include/game/player_skills/: skill.cpp  skill.h
include/panels/: admin_panel.cpp  admin_panel.h
include/utils/: imgui_utils.cpp  imgui_utils.h
src/: main.cpp
